--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -5,14 +5,17 @@ WORKDIR /app
 # Install system dependencies
 RUN apk --no-cache add curl git
 
-# Copy package files
-COPY package.json ./
+# Copy Canvas package first (at /Canvas so file:../Canvas resolves from /app)
+COPY Canvas/package.json /Canvas/package.json
+COPY Canvas/src /Canvas/src
 
-# Install dependencies
+# Copy package files and install dependencies
+COPY Hera/package.json Hera/bun.lock ./
 RUN bun install
 
 # Copy source code
-COPY . .
+COPY Hera/src ./src
+COPY Hera/next.config.js Hera/tsconfig.json Hera/tailwind.config.js Hera/postcss.config.mjs ./
 
 # Expose port
 EXPOSE 3000
