--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@olympus/canvas": "file:../Canvas",
+    "@tailwindcss/postcss": "^4.2.0",
+    "framer-motion": "^12.34.2",
     "next": "^15.3.0",
+    "postcss": "^8.5.6",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwindcss": "^4.2.0"
   },
   "devDependencies": {
     "@types/node": "^22.0.0",
