--- a/package.json
+++ b/package.json
@@ -9,9 +9,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@nivo/core": "^0.99.0",
+    "@nivo/line": "^0.99.0",
+    "@nivo/pie": "^0.99.0",
     "@olympus/canvas": "file:../Canvas",
     "@tailwindcss/postcss": "^4.2.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.34.2",
+    "lucide-react": "^0.574.0",
+    "radix-ui": "^1.4.3",
+    "tailwind-merge": "^3.5.0",
     "next": "^15.3.0",
     "postcss": "^8.5.6",
     "react": "^19.1.0",
