--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -2,23 +2,15 @@ FROM oven/bun:1-alpine
 
 WORKDIR /app
 
-# Install system dependencies
 RUN apk --no-cache add curl git
 
-# Copy Canvas package first (at /Canvas so file:../Canvas resolves from /app)
-COPY Canvas/package.json /Canvas/package.json
-COPY Canvas/src /Canvas/src
-
-# Copy package files and install dependencies
-COPY Hera/package.json Hera/bun.lock ./
+ARG NODE_AUTH_TOKEN
+COPY .npmrc ./
+COPY package.json bun.lock ./
 RUN bun install
 
-# Copy source code
-COPY Hera/src ./src
-COPY Hera/next.config.js Hera/tsconfig.json Hera/tailwind.config.js Hera/postcss.config.mjs ./
+COPY . .
 
-# Expose port
 EXPOSE 3000
 
-# Start development server
 CMD ["bun", "run", "dev"]
