--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
 		"@nivo/core": "^0.99.0",
 		"@nivo/line": "^0.99.0",
 		"@nivo/pie": "^0.99.0",
-		"@olympus/canvas": "^0.1.0",
+		"@olympusoss/canvas": "^0.1.0",
 		"@tailwindcss/postcss": "^4.2.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
