ci: trigger platform deploy after image push to GHCR

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -131,3 +131,15 @@ jobs:
 
       - name: Inspect image
         run: docker buildx imagetools inspect ${{ env.IMAGE_NAME }}:latest
+
+  notify-platform:
+    needs: merge
+    runs-on: ubuntu-latest
+    steps:
+      - name: Trigger platform deploy
+        uses: peter-evans/repository-dispatch@v4
+        with:
+          token: ${{ secrets.ORG_DISPATCH_TOKEN }}
+          repository: OlympusOSS/platform
+          event-type: image-pushed
+          client-payload: '{"service": "hera", "sha": "${{ github.sha }}"}'
